--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RecruitingApp">
         <activity
+            android:name=".CircleActivity"
+            android:label="@string/title_activity_circle"
+            android:theme="@style/Theme.RecruitingApp.NoActionBar"></activity>
+        <activity android:name=".MemberActivity" />
+        <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
             <intent-filter>
