--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="app.igarashi.igaryo.recruitingapp">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,11 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RecruitingApp">
-        <activity
-            android:name=".CircleActivity" />
-        <activity android:name=".MemberActivity"/>
-        <activity
-            android:name=".MainActivity">
+        <activity android:name=".PostActivity"></activity>
+        <activity android:name=".GroupActivity" />
+        <activity android:name=".PersonActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".CircleActivity" />
+        <activity android:name=".MemberActivity" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
