--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RecruitingApp">
-        <activity android:name=".PostActivity"></activity>
+        <activity android:name=".SettingActivity"></activity>
+        <activity android:name=".PostActivity" />
         <activity android:name=".GroupActivity" />
         <activity android:name=".PersonActivity" />
         <activity android:name=".LoginActivity" />
